--- a/package.json
+++ b/package.json
@@ -2,34 +2,35 @@
   "name": "roosters-fight",
   "version": "0.6.0",
   "dependencies": {
-    "clean-webpack-plugin": "1.0.1",
-    "copy-webpack-plugin": "4.5.2",
-    "file-loader": "3.0.1",
-    "html-webpack-plugin": "3.2.0",
-    "mini-css-extract-plugin": "0.5.0",
-    "prop-types": "^15.7.2",
+    "@flyer-engine/core": "0.6.1",
+    "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-router": "^5.2.0",
-    "uglifyjs-webpack-plugin": "1.3.0",
-    "webpack": "4.44.1",
-    "webpack-cli": "3.3.10",
-    "webpack-dev-server": "3.8.2"
+    "react-router": "5.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.3.4",
     "@babel/plugin-proposal-object-rest-spread": "7.3.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-react": "^7.10.4",
-    "@svgr/webpack": "^5.4.0",
-    "babel-eslint": "^10.1.0",
+    "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/preset-react": "7.10.4",
+    "@svgr/webpack": "5.4.0",
+    "babel-eslint": "10.1.0",
     "babel-loader": "8.0.5",
     "css-loader": "4.2.2",
     "eslint": "6.5.1",
-    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react": "7.20.5",
     "spritesmith": "3.4.0",
     "style-loader": "1.2.1",
-    "webpack-bundle-analyzer": "3.8.0"
+    "webpack-bundle-analyzer": "3.8.0",
+    "webpack": "4.44.1",
+    "webpack-cli": "3.3.10",
+    "webpack-dev-server": "3.8.2",
+    "clean-webpack-plugin": "1.0.1",
+    "copy-webpack-plugin": "4.5.2",
+    "html-webpack-plugin": "3.2.0",
+    "mini-css-extract-plugin": "0.5.0",
+    "uglifyjs-webpack-plugin": "1.3.0",
+    "file-loader": "3.0.1"
   },
   "scripts": {
     "start": "webpack-dev-server --hot --config webpack.config.dev.js",
